Tweak CSS to avoid overlapping with Firefox on Ubuntu

--- a/public/stylesheets/nwbib.css
+++ b/public/stylesheets/nwbib.css
@@ -6,7 +6,7 @@ dl {
 dt {
 	float: left;
 	clear: left;
-	width: 100px;
+	width: 150px;
 	text-align: right;
 	font-weight: bold;
 	color: black;
@@ -18,7 +18,7 @@ dt:after {
 }
 
 dd {
-	margin: 0 0 0 110px;
+	margin: 0 0 0 160px;
 	padding-bottom: 0.5em;
 	padding-top: 0.5em;
 }
